--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,13 @@
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
 
+# Other ignored folder
+/[Pp]ackages/
+/[Aa]ssets/Oculus*
+
+# Other ignored files
+.DS_Store
+
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # /[Aa]ssets/AssetStoreTools*
 
@@ -21,6 +28,7 @@
 
 # Visual Studio cache directory
 .vs/
+.vsconfig
 
 # Gradle cache directory
 .gradle/
